Bug36 (#447)
* unify margin for add-button, fix pink add-button, fix search for users, fix reloading of users

* do not show tab roles if user has no permission; fix scrollbar in add-user dialog

* Fix duplicate scrollbar in event-details

--- a/frontend/src/app/calendar/calendar.component.scss
+++ b/frontend/src/app/calendar/calendar.component.scss
@@ -23,6 +23,10 @@ h3 {
   .tabrow {
     margin-top: 10px;
 }
+
+.button{
+  margin: 10px;
+}
 .margin {
   margin-left: 10px;
   margin-right: 10px;
